--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,7 +19,63 @@ body {
 
   //background: radial-gradient(ellipse at bottom, #1b2735 0%, #191f24 100%);
   //height: 100vh;
+}
 
-  background-color: #3d3f53;
+main {
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+section {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+}
+
+.div-relativo {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+
+#section-1 {
+  z-index: 99;
+  background-color: #141e30;
   background-image: linear-gradient(to right, #141e30, #243b55);
+  top: 0px;
+  left: 0px;
+}
+
+#section-2 {
+  z-index: 98;
+  background-color: #2d0e0e;
+  background-image: linear-gradient(to right, #2d0e0e, #581c1c);
+  top: 0px;
+  left: 0px;
+}
+
+#section-3 {
+  z-index: 97;
+  background-color: #484815;
+  background-image: linear-gradient(to right, #484815, #92922b);
+  top: 0px;
+  left: 0px;
+}
+
+#section-4 {
+  z-index: 96;
+  background-color: #133513;
+  background-image: linear-gradient(to right, #133513, #297229);
+  top: 0px;
+  left: 0px;
+}
+
+#section-5 {
+  z-index: 95;
+  background-color: #341235;
+  background-image: linear-gradient(to right, #341235, #732775);
+  top: 0px;
+  left: 0px;
 }
