--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,6 +19,7 @@ body {
 
   //background: radial-gradient(ellipse at bottom, #1b2735 0%, #191f24 100%);
   //height: 100vh;
+  overflow: hidden;
 }
 
 main {
@@ -33,6 +34,12 @@ section {
   width: 100vw;
 }
 
+.section-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .div-relativo {
   position: relative;
   height: 100%;
@@ -41,7 +48,7 @@ section {
 }
 
 #section-1 {
-  z-index: 99;
+  z-index: 81;
   background-color: #141e30;
   background-image: linear-gradient(to right, #141e30, #243b55);
   top: 0px;
@@ -49,33 +56,33 @@ section {
 }
 
 #section-2 {
-  z-index: 98;
+  z-index: 82;
   background-color: #2d0e0e;
   background-image: linear-gradient(to right, #2d0e0e, #581c1c);
-  top: 0px;
+  top: 100vh;
   left: 0px;
 }
 
 #section-3 {
-  z-index: 97;
+  z-index: 83;
   background-color: #484815;
   background-image: linear-gradient(to right, #484815, #92922b);
   top: 0px;
-  left: 0px;
+  left: -100vw;
 }
 
 #section-4 {
-  z-index: 96;
+  z-index: 84;
   background-color: #133513;
   background-image: linear-gradient(to right, #133513, #297229);
   top: 0px;
-  left: 0px;
+  left: 100vw;
 }
 
 #section-5 {
-  z-index: 95;
+  z-index: 85;
   background-color: #341235;
   background-image: linear-gradient(to right, #341235, #732775);
-  top: 0px;
+  top: -100vh;
   left: 0px;
 }
