--- a/css/main.css
+++ b/css/main.css
@@ -273,12 +273,14 @@ main {
   position: relative;
   top: 0px;
   left: 0px;
+  height: 100vh;
+  width: 100vw;
 }
 
 section {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .section-flex {
@@ -338,12 +340,13 @@ section {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) translateY(0) translateX(0);
+  transform: translate(-50%, -50%) translateY(30vh) translateX(0);
   width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 86;
 }
 
 .nombre {
