--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -26,12 +26,14 @@ main {
   position: relative;
   top: 0px;
   left: 0px;
+  height: 100vh;
+  width: 100vw;
 }
 
 section {
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .section-flex {
