--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -35,6 +35,7 @@
 
 .nombre-opcion {
   @include texto-grande(#ffffff, 2.5rem);
+  margin-bottom: 40px;
 }
 
 .btn {
@@ -166,9 +167,5 @@
 }
 
 .contenedor-relativo {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  height: 250px;
-  justify-content: space-between;
+  position: relative;
 }
