--- a/css/main.css
+++ b/css/main.css
@@ -140,125 +140,83 @@
     border-radius: 50%;
   }
 }
-/* .menu {
+#btn-acceder {
   position: relative;
-  width: 300px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-.menu {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu .toggle {
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  background: #fff;
-  color: #141e30;
-  border-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 3em;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.menu .toggle.active {
-  transform: rotate(315deg);
-  box-shadow: 0 0 0 60px #fff, 0 0 0 68px #fff;
-  background-color: #141e30;
-  color: #fff;
-}
-
-.menu li {
-  position: absolute;
-  list-style: none;
-  left: -40px;
-  transform: rotate(calc(90deg * var(--i))) translateX(40px);
-  transform-origin: 140px;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.5s;
-  z-index: 10;
-}
-
-.menu.active li {
-  visibility: visible;
-  opacity: 1;
-}
-
-.menu li a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 55px;
-  height: 55px;
-  font-size: 1.75em;
-  color: #141e30;
-  transform: rotate(calc(-90deg * var(--i)));
-  border-radius: 50%;
-}
-
-.menu.active li.active {
-  transform: rotate(calc(90deg * var(--i))) translateX(12px);
-}
-
-.indicator {
-  position: absolute;
-  left: calc(50% + 2.5px);
-  transform-origin: right;
-  width: 100px;
-  height: 1px;
+  border: solid rgba(255, 255, 255, 0.3) 1px;
   background: transparent;
-  pointer-events: none;
-  transition: 0.5s;
+  cursor: pointer;
+  transition: all 1s;
+  border-radius: 5px;
+  padding: 5px 15px;
 }
-
-.indicator::before {
-  content: "";
+#btn-acceder span {
+  position: relative;
+  color: white;
+  font-family: monospace;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+#btn-acceder .line {
+  background: white;
   position: absolute;
-  top: -27.5px;
-  left: 72px;
-  width: 55px;
-  height: 55px;
-  background: #141e30;
-  box-shadow: 0 0 0 6px #30eeff;
-  border-radius: 50%;
-  transition: 0.5s;
-  opacity: 0;
-}
-
-.menu.active .indicator::before {
+  transition: none;
+  transform: scale(0);
   opacity: 1;
-  top: -27.5px;
-  left: -27.5px;
-  background: #30eeff;
-  box-shadow: 0 0 0 6px #141e30;
 }
-
-.menu li:nth-child(2).active ~ .indicator {
-  transform: translateX(-103px) rotate(0deg);
+#btn-acceder .line:nth-child(1) {
+  transform-origin: 100% 100%;
+  height: 1px;
+  width: 20%;
+  bottom: 0;
 }
-
-.menu li:nth-child(3).active ~ .indicator {
-  transform: translateX(-103px) rotate(90deg);
+#btn-acceder .line:nth-child(4) {
+  transform-origin: 0 100%;
+  height: 1px;
+  width: 20%;
+  top: -1px;
+  right: 0;
 }
-
-.menu li:nth-child(4).active ~ .indicator {
-  transform: translateX(-103px) rotate(180deg);
+#btn-acceder .line:nth-child(2) {
+  transform-origin: 100% 100%;
+  height: 100%;
+  width: 1px;
+  bottom: 0;
+  left: -1px;
 }
-
-.menu li:nth-child(5).active ~ .indicator {
-  transform: translateX(-103px) rotate(270deg);
+#btn-acceder .line:nth-child(5) {
+  transform-origin: 100% 0;
+  height: 100%;
+  width: 1px;
+  bottom: 0;
+  right: -1px;
+}
+#btn-acceder .line:nth-child(3) {
+  transform-origin: 0 100%;
+  height: 1px;
+  width: 100%;
+  top: -1px;
+  left: -1px;
+}
+#btn-acceder .line:nth-child(6) {
+  transform-origin: 100% 0;
+  height: 1px;
+  width: 100%;
+  bottom: 0;
+  right: -1px;
+}
+#btn-acceder:hover > .line {
+  transform: scale(1);
+  opacity: 0;
+  transition: all 1s;
+}
+#btn-acceder:hover > .line:nth-child(2), #btn-acceder:hover > .line:nth-child(5) {
+  transition-delay: 0.5s;
+}
+#btn-acceder:hover > .line:nth-child(3), #btn-acceder:hover > .line:nth-child(6) {
+  transition-delay: 0.9s;
+}
+#btn-acceder:hover {
+  background: rgba(255, 255, 255, 0.03);
 }
 
 *,
@@ -304,19 +262,19 @@ section {
   z-index: 1;
 }
 
-#section-1 {
+#section-2 {
   z-index: 81;
-  background-color: #141e30;
-  background-image: linear-gradient(to right, #141e30, #243b55);
+  background-color: #2d0e0e;
+  background-image: linear-gradient(to right, #2d0e0e, #581c1c);
   top: 0px;
   left: 0px;
 }
 
-#section-2 {
+#section-1 {
   z-index: 82;
-  background-color: #2d0e0e;
-  background-image: linear-gradient(to right, #2d0e0e, #581c1c);
-  top: 100vh;
+  background-color: #141e30;
+  background-image: linear-gradient(to right, #141e30, #243b55);
+  top: 0px;
   left: 0px;
 }
 
@@ -342,19 +300,6 @@ section {
   background-image: linear-gradient(to right, #341235, #732775);
   top: -100vh;
   left: 0px;
-}
-
-.contenedor-menu {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) translateY(30vh) translateX(0);
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 86;
 }
 
 .nombre {
@@ -446,6 +391,10 @@ section {
   display: none;
 }
 
+.flex {
+  display: flex;
+}
+
 .blurreado {
   filter: blur(3px) brightness(25%);
   transition: filter 0.5s ease;
@@ -486,6 +435,20 @@ section {
   line-height: 1.5rem;
   display: flex;
   flex-direction: column;
+}
+
+.botones-menu {
+  opacity: 0;
+  display: none;
+  margin-top: 30px;
+  font-family: monospace;
+  font-size: 0.9rem !important;
+  line-height: 1.5rem !important;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .dollar {
