--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "cj_anim";
 @import "bg_anim";
-@import "anim_menu";
+@import "menu_botones";
 @import "main";
 @import "portada";
 @import "section_2";
