--- a/css/main.css
+++ b/css/main.css
@@ -140,83 +140,25 @@
     border-radius: 50%;
   }
 }
-#btn-acceder {
-  position: relative;
-  border: solid rgba(255, 255, 255, 0.3) 1px;
-  background: transparent;
-  cursor: pointer;
-  transition: all 1s;
+.fuller-button {
+  color: rgb(255, 255, 255);
+  background: none;
+  transition: background-color 0.3s, box-shadow 0.3s, color 0.3s;
   border-radius: 5px;
   padding: 5px 15px;
-}
-#btn-acceder span {
-  position: relative;
-  color: white;
+  margin: 0 3px;
   font-family: monospace;
   font-size: 1rem;
-  line-height: 1rem;
+  line-height: 2rem;
 }
-#btn-acceder .line {
-  background: white;
-  position: absolute;
-  transition: none;
-  transform: scale(0);
-  opacity: 1;
+.fuller-button.white {
+  box-shadow: inset 0 0 0.8em rgba(255, 255, 255, 0.3), 0 0 0.8em rgba(255, 255, 255, 0.3);
+  border: #fff solid 2px;
 }
-#btn-acceder .line:nth-child(1) {
-  transform-origin: 100% 100%;
-  height: 1px;
-  width: 20%;
-  bottom: 0;
-}
-#btn-acceder .line:nth-child(4) {
-  transform-origin: 0 100%;
-  height: 1px;
-  width: 20%;
-  top: -1px;
-  right: 0;
-}
-#btn-acceder .line:nth-child(2) {
-  transform-origin: 100% 100%;
-  height: 100%;
-  width: 1px;
-  bottom: 0;
-  left: -1px;
-}
-#btn-acceder .line:nth-child(5) {
-  transform-origin: 100% 0;
-  height: 100%;
-  width: 1px;
-  bottom: 0;
-  right: -1px;
-}
-#btn-acceder .line:nth-child(3) {
-  transform-origin: 0 100%;
-  height: 1px;
-  width: 100%;
-  top: -1px;
-  left: -1px;
-}
-#btn-acceder .line:nth-child(6) {
-  transform-origin: 100% 0;
-  height: 1px;
-  width: 100%;
-  bottom: 0;
-  right: -1px;
-}
-#btn-acceder:hover > .line {
-  transform: scale(1);
-  opacity: 0;
-  transition: all 1s;
-}
-#btn-acceder:hover > .line:nth-child(2), #btn-acceder:hover > .line:nth-child(5) {
-  transition-delay: 0.5s;
-}
-#btn-acceder:hover > .line:nth-child(3), #btn-acceder:hover > .line:nth-child(6) {
-  transition-delay: 0.9s;
-}
-#btn-acceder:hover {
-  background: rgba(255, 255, 255, 0.03);
+.fuller-button.white:hover {
+  color: rgba(0, 0, 0, 0.8);
+  background-color: #fff;
+  box-shadow: inset 0 0 0 rgba(255, 255, 255, 0.3), 0 0 1.2em rgba(255, 255, 255, 0.5);
 }
 
 *,
@@ -243,7 +185,7 @@ main {
   width: 100vw;
 }
 
-section {
+.section-pagina {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -282,6 +224,7 @@ section {
   z-index: 83;
   background-color: #484815;
   background-image: linear-gradient(to right, #484815, #92922b);
+  scale: 0.8;
   top: 0px;
   left: -100vw;
 }
@@ -290,6 +233,7 @@ section {
   z-index: 84;
   background-color: #133513;
   background-image: linear-gradient(to right, #133513, #297229);
+  scale: 0.8;
   top: 0px;
   left: 100vw;
 }
@@ -298,8 +242,24 @@ section {
   z-index: 85;
   background-color: #341235;
   background-image: linear-gradient(to right, #341235, #732775);
+  scale: 0.8;
   top: -100vh;
   left: 0px;
+}
+
+.id-txt {
+  color: white;
+}
+
+#section-nav {
+  position: absolute;
+  z-index: 88;
+  background-color: white;
+  color: black;
+  top: 0;
+  left: 0px;
+  width: 100%;
+  height: 100px;
 }
 
 .nombre {
