--- a/scss/_menu_botones.scss
+++ b/scss/_menu_botones.scss
@@ -1,97 +1,24 @@
-$line-size: 1px;
-$delay1: 0.5s;
-$delay2: 0.9s;
-$distance: -1px;
+.fuller-button {
+  color: rgba(255, 255, 255, 1);
+  background: none;
+  transition: background-color 0.3s, box-shadow 0.3s, color 0.3s;
 
-#btn-acceder {
-  position: relative;
-  border: solid rgba(255, 255, 255, 0.3) 1px;
-  background: transparent;
-  cursor: pointer;
-  transition: all 1s;
   border-radius: 5px;
   padding: 5px 15px;
+  margin: 0 3px;
 
-  span {
-    position: relative;
-    color: white;
-    font-family: monospace;
-    font-size: $glb-fs;
-    line-height: $glb-fs;
+  font-family: monospace;
+  font-size: $glb-fs;
+  line-height: $glb-fs-lh;
+
+  &.white {
+    box-shadow: inset 0 0 0.8em rgba(255, 255, 255, 0.3), 0 0 0.8em rgba(255, 255, 255, 0.3);
+    border: #fff solid 2px;
   }
 
-  .line {
-    background: white;
-    position: absolute;
-    transition: none;
-    transform: scale(0);
-    opacity: 1;
-  }
-
-  .line:nth-child(1) {
-    transform-origin: 100% 100%;
-    height: $line-size;
-    width: 20%;
-    bottom: 0;
-  }
-
-  .line:nth-child(4) {
-    transform-origin: 0 100%;
-    height: $line-size;
-    width: 20%;
-    top: $distance;
-    right: 0;
-  }
-
-  .line:nth-child(2) {
-    transform-origin: 100% 100%;
-    height: 100%;
-    width: $line-size;
-    bottom: 0;
-    left: $distance;
-  }
-
-  .line:nth-child(5) {
-    transform-origin: 100% 0;
-    height: 100%;
-    width: $line-size;
-    bottom: 0;
-    right: $distance;
-  }
-
-  .line:nth-child(3) {
-    transform-origin: 0 100%;
-    height: $line-size;
-    width: 100%;
-    top: $distance;
-    left: $distance;
-  }
-
-  .line:nth-child(6) {
-    transform-origin: 100% 0;
-    height: $line-size;
-    width: 100%;
-    bottom: 0;
-    right: $distance;
-  }
-
-  &:hover > .line {
-    transform: scale(1);
-    opacity: 0;
-    transition: all 1s;
-  }
-
-  &:hover > .line:nth-child(2),
-  &:hover > .line:nth-child(5) {
-    transition-delay: $delay1;
-  }
-
-  &:hover > .line:nth-child(3),
-  &:hover > .line:nth-child(6) {
-    transition-delay: $delay2;
-  }
-
-  &:hover {
-    background: rgba(255, 255, 255, 0.03);
+  &.white:hover {
+    color: rgba(0, 0, 0, 0.8);
+    background-color: #fff;
+    box-shadow: inset 0 0 0 rgba(255, 255, 255, 0.3), 0 0 1.2em rgba(255, 255, 255, 0.5);
   }
 }
