--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -99,10 +99,14 @@ main {
 #section-nav {
   position: absolute;
   z-index: 88;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.3);
   color: black;
-  top: 0;
+  top: -60px;
+  //top: 0px;
   left: 0px;
   width: 100%;
-  height: 100px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
