--- a/scss/_menu_botones.scss
+++ b/scss/_menu_botones.scss
@@ -2,11 +2,9 @@
   color: rgba(255, 255, 255, 1);
   background: none;
   transition: background-color 0.3s, box-shadow 0.3s, color 0.3s;
-
   border-radius: 5px;
   padding: 5px 15px;
   margin: 0 3px;
-
   font-family: monospace;
   font-size: $glb-fs;
   line-height: $glb-fs-lh;
@@ -21,4 +19,63 @@
     background-color: #fff;
     box-shadow: inset 0 0 0 rgba(255, 255, 255, 0.3), 0 0 1.2em rgba(255, 255, 255, 0.5);
   }
+}
+
+.nav-menu-1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.nav-menu-1 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.nav-menu-1 li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 10px 10px;
+  padding: 0;
+}
+
+.nav-menu-1 a {
+  padding: 0.3em 0;
+  //color: rgba(255, 255, 255, 0.5);
+  color: #000000;
+  position: relative;
+  text-decoration: none;
+  display: inline-block;
+}
+.nav-menu-1 a:before,
+.nav-menu-1 a:after {
+  height: 3px;
+  position: absolute;
+  content: "";
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  background-color: #9b59b6;
+  width: 0;
+}
+.nav-menu-1 a:before {
+  top: 0;
+  left: 0;
+}
+.nav-menu-1 a:after {
+  bottom: 0;
+  right: 0;
+}
+.nav-menu-1 a:hover,
+.nav-menu-1 .current a {
+  color: #ffffff;
+}
+.nav-menu-1 a:hover:before,
+.nav-menu-1 .current a:before,
+.nav-menu-1 a:hover:after,
+.nav-menu-1 .current a:after {
+  width: 100%;
+}
+/* Demo purposes only */
+body {
+  background-color: #212121;
 }
