--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -50,6 +50,10 @@
 }
 
 @media (min-width: 993px) and (max-width: 1239px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
   .nav-menu-1 li {
     margin: 10px 10px;
   }
@@ -57,6 +61,10 @@
 
 /* Pantallas xxl */
 @media (min-width: 1240px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
   .height-auto {
     height: auto;
     width: 690px;
