form contacto terminado, se va a probar en linea 01

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -85,8 +85,12 @@ main {
 
 #section-5 {
   z-index: 85;
-  background-color: #341235;
-  background-image: linear-gradient(to right, #341235, #732775);
+
+  background-color: #141e30;
+  background-image: linear-gradient(to right, #141e30, #243b55);
+
+  //background-color: #341235;
+  //background-image: linear-gradient(to right, #341235, #732775);
   scale: 0.8;
   top: -100vh;
   left: 0px;
