--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -4,5 +4,5 @@
 @import "menu_botones";
 @import "main";
 @import "portada";
-@import "section_2";
+@import "section_contacto";
 @import "mqueries";
