--- a/scss/_section_contacto.scss
+++ b/scss/_section_contacto.scss
@@ -245,7 +245,7 @@ form {
   color: rgba(255, 255, 255, 0.8);
   display: inline-block;
   cursor: pointer;
-  pointer-events: none;
+  //pointer-events: none;
   position: absolute;
   top: 330px;
 }
@@ -278,7 +278,7 @@ form {
   transition: width 0.25s ease;
   transition-delay: 0.7s;
 }
-.item {
+.item-rrss {
   position: relative;
   display: inline-block;
   //margin-right: 30px;
@@ -293,74 +293,74 @@ span a {
   text-decoration: none;
   transition: color 0.5s ease;
 }
-.item:hover span a {
+.item-rrss:hover span a {
   color: #ff0000;
 }
 .menu-rss:hover .spacer:before {
   width: 100%;
   transition-delay: 0s;
 }
-.menu-rss:hover .item {
+.menu-rss:hover .item-rrss {
   opacity: 1;
   top: 0px;
 }
-.item:nth-child(1) {
+.item-rrss:nth-child(1) {
   transition-delay: 0.45s;
 }
-.item:nth-child(2) {
+.item-rrss:nth-child(2) {
   transition-delay: 0.4s;
 }
-.item:nth-child(3) {
+.item-rrss:nth-child(3) {
   transition-delay: 0.35s;
 }
-.item:nth-child(4) {
+.item-rrss:nth-child(4) {
   transition-delay: 0.3s;
 }
-.item:nth-child(5) {
+.item-rrss:nth-child(5) {
   transition-delay: 0.25s;
 }
-.item:nth-child(6) {
+.item-rrss:nth-child(6) {
   transition-delay: 0.2s;
 }
-.item:nth-child(7) {
+.item-rrss:nth-child(7) {
   transition-delay: 0.15s;
 }
-.item:nth-child(8) {
+.item-rrss:nth-child(8) {
   transition-delay: 0.1s;
 }
-.item:nth-child(9) {
+.item-rrss:nth-child(9) {
   transition-delay: 0.05s;
 }
-.item:nth-child(10) {
+.item-rrss:nth-child(10) {
   transition-delay: 0s;
 }
-.menu-rss:hover .item:nth-child(1) {
+.menu-rss:hover .item-rrss:nth-child(1) {
   transition-delay: 0.25s;
 }
-.menu-rss:hover .item:nth-child(2) {
+.menu-rss:hover .item-rrss:nth-child(2) {
   transition-delay: 0.3s;
 }
-.menu-rss:hover .item:nth-child(3) {
+.menu-rss:hover .item-rrss:nth-child(3) {
   transition-delay: 0.35s;
 }
-.menu-rss:hover .item:nth-child(4) {
+.menu-rss:hover .item-rrss:nth-child(4) {
   transition-delay: 0.4s;
 }
-.menu-rss:hover .item:nth-child(5) {
+.menu-rss:hover .item-rrss:nth-child(5) {
   transition-delay: 0.45s;
 }
-.menu-rss:hover .item:nth-child(6) {
+.menu-rss:hover .item-rrss:nth-child(6) {
   transition-delay: 0.5s;
 }
-.menu-rss:hover .item:nth-child(7) {
+.menu-rss:hover .item-rrss:nth-child(7) {
   transition-delay: 0.55s;
 }
-.menu-rss:hover .item:nth-child(8) {
+.menu-rss:hover .item-rrss:nth-child(8) {
   transition-delay: 0.6s;
 }
-.menu-rss:hover .item:nth-child(9) {
+.menu-rss:hover .item-rrss:nth-child(9) {
   transition-delay: 0.65s;
 }
-.menu-rss:hover .item:nth-child(10) {
+.menu-rss:hover .item-rrss:nth-child(10) {
   transition-delay: 0.7s;
 }
