--- a/css/main.css
+++ b/css/main.css
@@ -273,8 +273,8 @@ main {
 
 #section-2 {
   z-index: 81;
-  background-color: #2d0e0e;
-  background-image: linear-gradient(to right, #2d0e0e, #581c1c);
+  background-color: #141e30;
+  background-image: linear-gradient(to right, #141e30, #243b55);
   top: 0px;
   left: 0px;
 }
@@ -314,10 +314,6 @@ main {
   left: 0px;
 }
 
-.id-txt {
-  color: white;
-}
-
 #section-nav {
   position: absolute;
   z-index: 88;
@@ -330,6 +326,93 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.txt-servicios {
+  color: white;
+  position: absolute;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 5rem;
+  letter-spacing: 1px;
+  opacity: 0;
+  scale: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.txt-servicios-pregunta {
+  scale: 0;
+}
+
+#ts-1 {
+  background: rgba(0, 0, 0, 0.7) url("../img/web-estatica.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-2 {
+  background: rgba(0, 0, 0, 0.7) url("../img/spa.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-3 {
+  background: rgba(0, 0, 0, 0.7) url("../img/front.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-4 {
+  background: rgba(0, 0, 0, 0.7) url("../img/back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-5 {
+  background: rgba(0, 0, 0, 0.7) url("../img/api.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-6 {
+  background: rgba(0, 0, 0, 0.7) url("../img/wordpress.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-7 {
+  background: rgba(0, 0, 0, 0.7) url("../img/disenografico.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-8 {
+  background: rgba(0, 0, 0, 0.7) url("../img/brand.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#ts-9 {
+  background: rgba(0, 0, 0, 0.7) url("../img/multimedia.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.ts-x {
+  background-blend-mode: overlay;
 }
 
 .nombre {
