--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -53,6 +53,11 @@
   .menu-rss {
     top: 250px;
   }
+
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
 }
 
 @media (min-width: 993px) and (max-width: 1239px) {
@@ -68,6 +73,10 @@
   }
   .menu-rss {
     top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
   }
 }
 
@@ -90,6 +99,10 @@
   }
   .menu-rss {
     top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
   }
   /* .nombre {
     font-size: 4.5rem;
