--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -71,7 +71,7 @@ main {
   z-index: 83;
   background-color: #484815;
   background-image: linear-gradient(to right, #484815, #92922b);
-  scale: 0.8;
+  scale: 0.9;
   top: 0px;
   left: -100vw;
 }
@@ -80,7 +80,7 @@ main {
   z-index: 84;
   background-color: #133513;
   background-image: linear-gradient(to right, #133513, #297229);
-  scale: 0.8;
+  scale: 0.9;
   top: 0px;
   left: 100vw;
 }
@@ -89,7 +89,7 @@ main {
   z-index: 85;
   background-color: #141e30;
   background-image: linear-gradient(to right, #141e30, #243b55);
-  scale: 0.8;
+  scale: 0.9;
   top: -100vh;
   left: 0px;
 }
@@ -114,7 +114,7 @@ main {
   position: absolute;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  font-size: 5rem;
+  font-size: 3rem;
   letter-spacing: 1px;
   opacity: 0;
   scale: 1.5;
@@ -123,6 +123,8 @@ main {
   align-items: center;
   width: 100%;
   height: 100%;
+  line-height: 4rem;
+  text-align: center;
 }
 
 .txt-servicios-pregunta {
