swiper agregado y colocado en pagina servicios. Se va a probar

--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,24 @@ body {
   background-color: #212121;
 }
 
+.swiper-carousel-servicios {
+  position: absolute;
+  z-index: 50;
+  bottom: 10%;
+  left: 200%;
+  width: 900px;
+  height: 400px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide-custom {
+  background-color: white;
+}
+
 *,
 *:after,
 *::before {
@@ -336,6 +354,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: transparent;
 }
 
 .txt-servicios {
