--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -2,6 +2,7 @@
 @import "cj_anim";
 @import "bg_anim";
 @import "menu_botones";
+@import "swiper";
 @import "main";
 @import "portada";
 @import "section_contacto";
