--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,3 +19,4 @@ $glb-fs-lh: 2rem;
 $glb-fs-small: 0.9rem;
 $glb-fs-small-lh: 1.5rem;
 $glb-color-overlay: rgba(0, 0, 0, 0.9);
+$glb-color-overlay-brand-1: rgb(1, 52, 82, 0.9);
