--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -167,37 +167,37 @@ main {
 }
 
 #ts-1 {
-  @include ts-x-texto($glb-color-overlay, "../img/web-estatica.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide0.jpg");
 }
 
 #ts-2 {
-  @include ts-x-texto($glb-color-overlay, "../img/spa.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide1.jpg");
 }
 
 #ts-3 {
-  @include ts-x-texto($glb-color-overlay, "../img/front.png");
+  @include ts-x-texto($glb-color-overlay, "../img/slide2.jpg");
 }
 
 #ts-4 {
-  @include ts-x-texto($glb-color-overlay, "../img/back.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide3.jpg");
 }
 
 #ts-5 {
-  @include ts-x-texto($glb-color-overlay, "../img/api.png");
+  @include ts-x-texto($glb-color-overlay, "../img/slide4.jpg");
 }
 
 #ts-6 {
-  @include ts-x-texto($glb-color-overlay, "../img/wordpress.png");
+  @include ts-x-texto($glb-color-overlay, "../img/slide5.jpg");
 }
 
 #ts-7 {
-  @include ts-x-texto($glb-color-overlay, "../img/disenografico.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide6.jpg");
 }
 
 #ts-8 {
-  @include ts-x-texto($glb-color-overlay, "../img/brand.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide7.jpg");
 }
 
 #ts-9 {
-  @include ts-x-texto($glb-color-overlay, "../img/multimedia.jpg");
+  @include ts-x-texto($glb-color-overlay, "../img/slide8.jpg");
 }
