--- a/scss/_swiper.scss
+++ b/scss/_swiper.scss
@@ -7,6 +7,17 @@
   height: 400px;
 }
 
+.ecran-slides-servicios {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: bisque;
+  z-index: 49;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
