se puso el swiper y el gsap responsivo para que se posicione de acuerdo al ancho de la pantalla - ahora toca manejar el alto

--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -1,5 +1,16 @@
-@media (max-width: 280px) {
-  /* Estilos para dispositivos móviles */
+/* @media (max-width: 280px) {
+  .nav-menu-1 {
+    font-size: 10px;
+    li {
+      margin: 10px 3px;
+    }
+  }
+} */
+
+@media screen and (max-width: 279) {
+}
+
+@media screen and (min-width: 280px) and (max-width: 319px) {
   .nav-menu-1 {
     font-size: 10px;
     li {
@@ -8,8 +19,7 @@
   }
 }
 
-@media (min-width: 281px) and (max-width: 320px) {
-  /* Estilos para dispositivos móviles */
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .nav-menu-1 {
     font-size: 12px;
     li {
@@ -18,28 +28,183 @@
   }
 }
 
-@media (min-width: 321px) and (max-width: 360px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .swiper-carousel-servicios {
+    width: 560px;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1239px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1240px) and (max-width: 2559px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .height-auto {
+    height: auto;
+    width: 690px;
+  }
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+  @keyframes rsWidht {
+    0% {
+      width: 0px;
+    }
+    100% {
+      width: 690px;
+    }
+  }
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .height-auto {
+    height: auto;
+    width: 690px;
+  }
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+  @keyframes rsWidht {
+    0% {
+      width: 0px;
+    }
+    100% {
+      width: 690px;
+    }
+  }
+  .swiper-carousel-servicios {
+    width: 1150px;
+    height: 400px;
+  }
+}
+
+//###############################################
+//###############################################
+//###############################################
+//###############################################
+/* 
+@media (min-width: 280px) and (max-width: 319px) {
+  .nav-menu-1 {
+    font-size: 10px;
+    li {
+      margin: 10px 3px;
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 359px) {
   .nav-menu-1 {
     font-size: 12px;
     li {
       margin: 10px 7px;
     }
   }
-}
-
-@media (min-width: 361px) and (max-width: 390px) {
-  .nav-menu-1 li {
-    margin: 10px 10px;
+  .swiper-carousel-servicios {
+    width: 320px;
+    height: 80vh;
   }
 }
 
-@media (min-width: 361px) and (max-width: 767px) {
+@media (min-width: 360px) and (max-width: 389px) {
   .nav-menu-1 li {
     margin: 10px 10px;
   }
+
+  .swiper-carousel-servicios {
+    width: 360px;
+    height: 80vh;
+  }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 390px) and (max-width: 767px) {
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+
+  .swiper-carousel-servicios {
+    width: 390px;
+    height: 400px;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 991px) {
   .codigo {
     font-size: $glb-fs;
     line-height: $glb-fs-lh;
@@ -58,9 +223,14 @@
     font-size: 6rem;
     line-height: 6rem;
   }
+
+  .swiper-carousel-servicios {
+    width: 450px;
+    height: 400px;
+  }
 }
 
-@media (min-width: 993px) and (max-width: 1239px) {
+@media (min-width: 992px) and (max-width: 1240px) {
   .codigo {
     font-size: $glb-fs;
     line-height: $glb-fs-lh;
@@ -78,10 +248,15 @@
     font-size: 6rem;
     line-height: 6rem;
   }
+
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
 }
 
-/* Pantallas xxl */
-@media (min-width: 1240px) {
+
+@media (min-width: 1241px) {
   .codigo {
     font-size: $glb-fs;
     line-height: $glb-fs-lh;
@@ -104,9 +279,11 @@
     font-size: 6rem;
     line-height: 6rem;
   }
-  /* .nombre {
-    font-size: 4.5rem;
-  } */
+
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
 
   @keyframes rsWidht {
     0% {
@@ -117,3 +294,4 @@
     }
   }
 }
+ */
