--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Exo:100");
 .pizarra-animate--height {
@@ -233,7 +232,7 @@ body {
   z-index: 50;
   bottom: 10%;
   left: 200%;
-  width: 900px;
+  width: 90vw;
   height: 400px;
 }
 
@@ -1007,8 +1006,15 @@ span a {
   transition-delay: 0.7s;
 }
 
-@media (max-width: 280px) {
-  /* Estilos para dispositivos móviles */
+/* @media (max-width: 280px) {
+  .nav-menu-1 {
+    font-size: 10px;
+    li {
+      margin: 10px 3px;
+    }
+  }
+} */
+@media screen and (min-width: 280px) and (max-width: 319px) {
   .nav-menu-1 {
     font-size: 10px;
   }
@@ -1016,8 +1022,7 @@ span a {
     margin: 10px 3px;
   }
 }
-@media (min-width: 281px) and (max-width: 320px) {
-  /* Estilos para dispositivos móviles */
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .nav-menu-1 {
     font-size: 12px;
   }
@@ -1025,25 +1030,12 @@ span a {
     margin: 10px 7px;
   }
 }
-@media (min-width: 321px) and (max-width: 360px) {
-  .nav-menu-1 {
-    font-size: 12px;
-  }
-  .nav-menu-1 li {
-    margin: 10px 7px;
-  }
-}
-@media (min-width: 361px) and (max-width: 390px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .nav-menu-1 li {
     margin: 10px 10px;
   }
 }
-@media (min-width: 361px) and (max-width: 767px) {
-  .nav-menu-1 li {
-    margin: 10px 10px;
-  }
-}
-@media (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .codigo {
     font-size: 1rem;
     line-height: 2rem;
@@ -1061,8 +1053,12 @@ span a {
     font-size: 6rem;
     line-height: 6rem;
   }
+  .swiper-carousel-servicios {
+    width: 560px;
+    height: 400px;
+  }
 }
-@media (min-width: 993px) and (max-width: 1239px) {
+@media screen and (min-width: 1024px) and (max-width: 1239px) {
   .codigo {
     font-size: 1rem;
     line-height: 2rem;
@@ -1080,9 +1076,12 @@ span a {
     font-size: 6rem;
     line-height: 6rem;
   }
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
 }
-/* Pantallas xxl */
-@media (min-width: 1240px) {
+@media screen and (min-width: 1240px) and (max-width: 2559px) {
   .codigo {
     font-size: 1rem;
     line-height: 2rem;
@@ -1104,9 +1103,180 @@ span a {
     font-size: 6rem;
     line-height: 6rem;
   }
-  /* .nombre {
-    font-size: 4.5rem;
-  } */
+  @keyframes rsWidht {
+    0% {
+      width: 0px;
+    }
+    100% {
+      width: 690px;
+    }
+  }
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
+}
+@media screen and (min-width: 2560px) {
+  .codigo {
+    font-size: 1rem;
+    line-height: 2rem;
+  }
+  .height-auto {
+    height: auto;
+    width: 690px;
+  }
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+  @keyframes rsWidht {
+    0% {
+      width: 0px;
+    }
+    100% {
+      width: 690px;
+    }
+  }
+  .swiper-carousel-servicios {
+    width: 1150px;
+    height: 400px;
+  }
+}
+/* 
+@media (min-width: 280px) and (max-width: 319px) {
+  .nav-menu-1 {
+    font-size: 10px;
+    li {
+      margin: 10px 3px;
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 359px) {
+  .nav-menu-1 {
+    font-size: 12px;
+    li {
+      margin: 10px 7px;
+    }
+  }
+  .swiper-carousel-servicios {
+    width: 320px;
+    height: 80vh;
+  }
+}
+
+@media (min-width: 360px) and (max-width: 389px) {
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+
+  .swiper-carousel-servicios {
+    width: 360px;
+    height: 80vh;
+  }
+}
+
+@media (min-width: 390px) and (max-width: 767px) {
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+
+  .swiper-carousel-servicios {
+    width: 390px;
+    height: 400px;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 991px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .swiper-carousel-servicios {
+    width: 450px;
+    height: 400px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1240px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .nav-menu-1 li {
+    margin: 10px 10px;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
+}
+
+
+@media (min-width: 1241px) {
+  .codigo {
+    font-size: $glb-fs;
+    line-height: $glb-fs-lh;
+  }
+  .height-auto {
+    height: auto;
+    width: 690px;
+  }
+
+  .nav-menu-1 li {
+    margin: 0.5em 1.5em;
+  }
+  .screen {
+    height: 420px;
+  }
+  .menu-rss {
+    top: 250px;
+  }
+  .txt-servicios {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .swiper-carousel-servicios {
+    width: 900px;
+    height: 400px;
+  }
+
   @keyframes rsWidht {
     0% {
       width: 0px;
@@ -1116,5 +1286,6 @@ span a {
     }
   }
 }
+ */
 
 /*# sourceMappingURL=main.css.map */
