vamos a cambiar el intro que es demasiado largo

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -5,5 +5,7 @@
 @import "swiper";
 @import "main";
 @import "portada";
+@import "section_about_card";
+@import "section_about";
 @import "section_contacto";
 @import "mqueries";
