--- a/scss/_section_about.scss
+++ b/scss/_section_about.scss
@@ -1,3 +1,13 @@
 .fondo-about {
-  background-color: yellow;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 100vh;
+}
+
+.contenedor-card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
