se colocó la tarjeta d epresentación en el intro. Aún no se borran las funciones y demas codigo comentado.

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -5,7 +5,7 @@
 @import "swiper";
 @import "main";
 @import "portada";
-@import "section_about_card";
+@import "profile_card_1";
 @import "section_about";
 @import "section_contacto";
 @import "mqueries";
