--- a/css/main.css
+++ b/css/main.css
@@ -626,24 +626,28 @@ main {
   position: relative;
 }
 
-/* html {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 16px;
-	font-smooth: auto;
-	font-weight: 300;
-	line-height: 1.5;
-	color: #444;
+.btn-ingresar-card {
+  top: 0px;
+  left: 0px;
+  width: auto;
+  position: relative;
+  margin-top: 20px;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
 }
 
-body {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100vh;
-	background: linear-gradient(45deg, $bg1, $bg2);
-} */
+.contenedor-card {
+  position: absolute;
+  top: 200vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.puntos-gsap {
+  opacity: 0;
+}
+
 code, .card .line-numbers {
   font-family: "Lucida Console", Monaco, monospace;
   font-size: 14px;
@@ -652,7 +656,7 @@ code, .card .line-numbers {
 .card {
   position: relative;
   width: 30rem;
-  height: 15rem;
+  height: 18rem;
   perspective: 150rem;
 }
 .card-front, .card-back {
@@ -762,13 +766,6 @@ code, .card .line-numbers {
   width: 100%;
   position: absolute;
   top: 100vh;
-}
-
-.contenedor-card {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 form {
